--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ body {
   margin: 0;
   min-height: 100dvh;
   min-width: 100dvw;
+  touch-action: manipulation;
   background-image:
     url("./assets/images/pattern-circle.svg"),
     url("./assets/images/pattern-lines.svg"),
@@ -137,7 +138,7 @@ form {
   justify-content: center;
   border: 2px dashed var(--neutral-700);
   border-radius: 0.6rem;
-  background-color: #9a97972a;
+  background-color: #7272722a;
   backdrop-filter: blur(1px);
   -webkit-backdrop-filter: blur(1px);
   color: var(--neutral-300);
@@ -147,6 +148,10 @@ form {
 
   &:focus {
     outline: thick double var(--neutral-700);
+  }
+
+  &:hover {
+    background-color: #72727253;
   }
 
   img {
@@ -170,7 +175,7 @@ span {
   }
 }
 
-.form-error {
+.info.error {
   svg path {
     stroke: var(--orange-500);
   }
@@ -205,7 +210,7 @@ input {
   border-radius: 0.6rem;
   border: 1px solid var(--neutral-700);
   padding: 0.8rem;
-  background-color: #9a97972a;
+  background-color: #7272722a;
   backdrop-filter: blur(1px);
   -webkit-backdrop-filter: blur(1px);
 
@@ -221,12 +226,16 @@ input {
     border-color: var(--orange-500);
   }
 
-  &[data-error]:not([data-error=""]) + .form-error {
+  &[data-error]:not([data-error=""]) + .info.error {
     display: flex;
   }
   
-  &[data-error]:not([data-error=""]) + .form-error .error-text {
+  &[data-error]:not([data-error=""]) + .info.error .error-text {
     color: var(--orange-500);
   }
+}
+
+.hidden {
+  display: none;
 }
 
