--- a/styles.css
+++ b/styles.css
@@ -45,19 +45,29 @@
   font-style: normal;
 }
 
+html {
+  display: flex;
+  justify-content: center;
+}
+
 body {
   font-family: Inconsolata, sans-serif;
   margin: 0;
   min-height: 100dvh;
   min-width: 100dvw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   touch-action: manipulation;
   background-image:
+    url("./assets/images/pattern-circle.svg"),
     url("./assets/images/pattern-circle.svg"),
     url("./assets/images/pattern-lines.svg"),
     url("./assets/images/pattern-squiggly-line-top.svg"),
     url("./assets/images/pattern-squiggly-line-bottom-mobile-tablet.svg"),
     url("./assets/images/background-mobile.png");
   background-position:
+    calc(0% - 20px) -3%,
     calc(100% + 40px) 58%,
     top,
     right 25px,
@@ -68,36 +78,35 @@ body {
     no-repeat,
     no-repeat,
     no-repeat,
+    no-repeat,
     no-repeat;
   background-size:
+    90px,
     90px,
     cover,
     100px,
     80%,
     cover;
   color: #ffffff;
-  touch-action: manipulation;
-}
-
-main {
-  padding: 1rem;
-  margin-top: 1rem;
 }
 
 header {
   display: flex;
-  width: 100%;
+  flex-direction: column;
+  max-width: 650px;
   justify-content: center;
-  padding-top: 2rem;
-
+  align-items: center;
+  padding: 2rem 1rem 0;
+  
   img {
-    width: 50%;
+    width: 150px;
     height: auto;
+    margin-bottom: 2rem;
   }
 }
 
-.main-header {
-  padding: 0;
+.title   {
+  padding: 0 0.5rem;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -105,12 +114,18 @@ header {
   gap: 1rem;
 }
 
+main {
+  padding: 1rem;
+  width: clamp(300px, 100%, 400px)
+}
+
 h1 {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
 }
 
 h2 {
-  font-size: 1rem;
+  width: 99%;
+  font-size: 1.1rem;
   font-weight: 400;
   color: var(--neutral-300);
 }
@@ -146,7 +161,7 @@ form {
   gap: 0.9rem;
   cursor: pointer;
 
-  &:focus {
+  &:focus, &.dragging {
     outline: thick double var(--neutral-700);
   }
 
@@ -156,14 +171,46 @@ form {
 
   img {
     flex-shrink: 0;
+    width: 40px;
+    height: 40px;
     padding: .4rem;
     background-color: var(--neutral-700);
     border-radius: 0.7rem;
     border: 1px solid var(--neutral-500);
   }
+
+  span {
+    padding: 0.17rem;
+  }
 }
 
-span {
+.upload-button.uploaded {
+  cursor: auto;
+
+  &:hover {
+    background-color: #7272722a;
+  }
+  .options {
+    display: flex;
+    gap: 0.5rem;
+  }
+
+  .options button {
+    cursor: pointer;
+    font-family: inherit;
+    padding: 0.25rem 0.5rem;
+    border-radius: .3rem;
+    border: none;
+    color: var(--neutral-300);
+    background-color: var(--neutral-700);
+  }
+
+  span {
+    display: none;
+  }
+}
+
+.info {
   display: flex;
   font-size: 0.65rem;
   align-items: center;
@@ -172,12 +219,6 @@ span {
 
   &.hidden {
     display: none;
-  }
-}
-
-.info.error {
-  svg path {
-    stroke: var(--orange-500);
   }
 }
 
@@ -225,12 +266,20 @@ input {
   &[data-error]:not([data-error=""]) {
     border-color: var(--orange-500);
   }
-
+/* 
   &[data-error]:not([data-error=""]) + .info.error {
     display: flex;
   }
   
-  &[data-error]:not([data-error=""]) + .info.error .error-text {
+  &[data-error]:not([data-error=""]) +  */
+}
+
+.info.error {
+  svg path {
+    stroke: var(--orange-500);
+  }
+
+  .text {
     color: var(--orange-500);
   }
 }
@@ -239,3 +288,207 @@ input {
   display: none;
 }
 
+/* Ticket Styles */
+
+.ticket-container {
+  display: flex;
+  aspect-ratio: 16 / 9;
+  width: 350px;
+  padding: 1rem;
+  margin-top: 3rem;
+
+  justify-content: center;
+  align-items: center;
+
+  background-image: url("/assets/images/pattern-ticket.svg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.ticket {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+
+.ticket-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1rem 0;
+  width: 95%;
+  gap: 0.8rem;
+}
+
+.ticket-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 5%;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  padding-right: 0.3rem;
+
+  span {
+    font-size: 1.5rem;
+    color: var(--neutral-500);
+  }
+}
+
+.ticket-card-header {
+  display: flex;
+  gap: 0.9rem;
+  align-items: flex-start;
+
+  img {
+    padding-top: 0.3rem;
+    height: 40px;
+  }
+}
+
+.ticket-title, .user-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 0.7rem;
+
+  h3 {
+    display: inline-block;
+    font-size: 1.2rem;
+    letter-spacing: -0.8px;
+    transform: scaleY(1.05);
+  }
+  span {
+    font-size: 0.7rem;
+    color: var(--neutral-300);
+  }
+}
+
+.ticket-card-content {
+  display: flex;
+  gap: 0.9rem;
+  align-items: center;
+
+  img {
+    flex-shrink: 0;
+    width: 50px;
+    height: 50px;
+    border-radius: 0.4rem;
+  }
+}
+
+.user-info {
+  gap: 0.3rem;
+
+  h3 {
+    font-size: 1rem;
+    font-weight: 400;
+  }
+  div {
+    display: flex;
+    align-items: center;  
+    gap: 0.2rem;
+  }
+}
+
+#fullname {
+  background: linear-gradient(to right, hsl(7, 86%, 67%), hsl(0, 0%, 100%));
+  background-clip: text;
+  color: transparent;
+}
+
+#email {
+  color: var(--orange-500);
+}
+
+/* ------------ MEDIA QUERIES ------------ */
+
+@media (min-width: 768px) {
+  body {
+    background-image:
+    url("./assets/images/pattern-circle.svg"),
+    url("./assets/images/pattern-circle.svg"),
+    url("./assets/images/pattern-lines.svg"),
+    url("./assets/images/pattern-squiggly-line-top.svg"),
+    url("./assets/images/pattern-squiggly-line-bottom-mobile-tablet.svg"),
+    url("./assets/images/background-tablet.png");
+        
+    background-position:
+      calc(0% - 20px) -3%,
+      calc(80% + 20px) 50%,
+      center,
+      right 5%,
+      bottom left,
+      center;
+
+    background-size:
+      130px,
+      130px,
+      cover,
+      200px,
+      50%,
+      cover;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  body {
+    background-image:
+    url("./assets/images/pattern-circle.svg"),
+    url("./assets/images/pattern-circle.svg"),
+    url("./assets/images/pattern-lines.svg"),
+    url("./assets/images/pattern-squiggly-line-top.svg"),
+    url("./assets/images/pattern-squiggly-line-bottom-desktop.svg"),
+    url("./assets/images/background-desktop.png");
+
+    background-position:
+      calc(0% - 20px) -3%,
+      calc(72% + 20px) 55%,
+      center,
+      right 5%,
+      -15% bottom,
+      center;
+
+    background-size:
+      200px,
+      200px,
+      cover,
+      350px,
+      850px,
+      cover;
+  }
+
+  .ticket-container {
+    width: 420px;
+  }
+
+  .ticket-left {
+    padding: 2rem 0;
+  }
+  
+  .ticket-title, .user-info {
+    gap: 0.7rem;
+
+    h3 {
+      display: inline-block;
+      font-size: 1.5rem;
+      letter-spacing: -0.8px;
+      transform: scaleY(1.05);
+    }
+    span {
+      font-size: 0.9rem;
+      color: var(--neutral-300);
+    }
+  }
+
+  .user-info {
+    gap: 0.2rem;
+  }
+}
